# some

./: .gitignore  .travis.yml  ChangeLog.md  Makefile  README.md  cabal.haskell-ci  cabal.project  default.nix  some.cabal
.github/workflows/: haskell-ci.yml
some/: ChangeLog.md  some.cabal
some/src/Data/GADT/: Compare.hs
src-safe/Data/: Some.hs
src-unsafe/Data/: Some.hs
src/Data/: EqP.hs  OrdP.hs  Some.hs
src/Data/GADT/: Coerce.hs  Compare.hs  DeepSeq.hs  Instances.hs  Internal.hs  Show.hs
src/Data/Some/: Church.hs  GADT.hs  Newtype.hs
test/: HKD.hs
type-equality-compat/: LICENSE  cabal.project  type-equality-compat.cabal
type-equality-compat/src-hetero/Data/Type/Equality/: Hetero.hs
type-equality-compat/src-old/Data/Type/: Equality.hs
